# tauri-samples

./: .gitignore  README.md
calculator/: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
calculator/src/: App.svelte  app.css  main.ts
calculator/src-tauri/: Cargo.toml  tauri.conf.json
calculator/src-tauri/icons/: icon.icns
canban/: package-lock.json  package.json
canban/src/: App.vue
canban/src/components/: KanbanBoard.vue
kanban/: README.md  create-icon.js  index.html  package-lock.json  package.json  vite.config.js
kanban/src-tauri/: Cargo.toml  tauri.conf.json
kanban/src-tauri/icons/: icon.icns
kanban/src/components/: KanbanBoard.vue
markdown-editor/: README.md  package-lock.json  package.json
markdown-editor/src/: App.css  App.jsx
markdown-editor/src-tauri/: Cargo.toml  tauri.conf.json
memory-game/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
memory-game/src/: App.svelte  main.ts
memory-game/src-tauri/: Cargo.toml  tauri.conf.json
memory-game/src-tauri/capabilities/: main.json
memory-game/src/lib/: SingleCard.svelte
slide-puzzle/: README.md  index.html
slide-puzzle/js/: game.js
slide-puzzle/src-tauri/: Cargo.toml  tauri.conf.json
slide-puzzle/src/js/: game.js
