[package]
name = "kanban"
version = "0.1.0"
description = "A Tauri Kanban Board Application"
authors = ["Hui Zhou"]
license = ""
repository = ""
default-run = "kanban"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.2", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
