[package]
name = "markdown-editor"
version = "0.1.0"
description = "A Markdown Editor built with Tauri"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.0", features = ["dialog-all", "fs-all"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
