[package]
name = "slide-puzzle"
version = "0.1.0"
description = "A Tauri Slide Puzzle Game"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.12", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-alpha.17", features = [] }

[features]
custom-protocol = ["tauri/custom-protocol"]
